# Fractaler

./: Fractaler.cabal  Fractaler.hs  README  Templates.hs  fractaler.cabal  fractaler.hs  rcom.py  readme  rply.py
