name: Fractaler
author: Demur Rumed
category: Graphics
version: 3
build-type: Simple
license: MIT
description: Fractal renderer
cabal-version: >= 1.2
executable Fractaler
  build-depends: base, time, random, parallel >= 3, OpenGL, GLFW-b, FTGL
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  main-is: Fractaler.hs

